Fixed captcha centering on Firefox

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -109,6 +109,7 @@ body, html{
 }
 .captchacontainer{
     text-align: -webkit-center;
+    text-align: -moz-center;
 }
 #recaptcha{
     position: absolute;
